Fix build. (#1018)
* Fix build.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Remove unused import.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

---------

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>