@@ -16,6 +16,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.io.IOException;
+import java.util.Map;
 import java.util.Collections;
 
 import org.apache.lucene.search.TotalHits;
@@ -103,18 +104,7 @@ public class SearchModelTransportActionTests extends OpenSearchTestCase {
 
         Metadata metadata = mock(Metadata.class);
         when(metadata.hasIndex(anyString())).thenReturn(true);
-        ClusterState testState = new ClusterState(
-            new ClusterName("mock"),
-            123l,
-            "111111",
-            metadata,
-            null,
-            null,
-            null,
-            Collections.singletonMap("key", null),
-            0,
-            false
-        );
+        ClusterState testState = new ClusterState(new ClusterName("mock"), 123l, "111111", metadata, null, null, null, Map.of(), 0, false);
         when(clusterService.state()).thenReturn(testState);
     }
 
